infrastructure/k8s/cloudwatch-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudwatch-agent
  namespace: AmazonCloudWatch
  labels:
    app: cloudwatch-agent
spec:
  selector:
    matchLabels:
      app: cloudwatch-agent
  template:
    metadata:
      labels:
        app: cloudwatch-agent
    spec:
      serviceAccountName: cloudwatch-agent
      terminationGracePeriodSeconds: 60
      containers:
        - name: cloudwatch-agent
          image: amazon/cloudwatch-agent:1.247350.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: cwagent-config
              mountPath: /etc/cwagentconfig
            - name: run
              mountPath: /var/run/docker.sock
              readOnly: true
            - name: rootfs
              mountPath: /host/root
              readOnly: true
            - name: containerd-sock
              mountPath: /var/run/containerd/containerd.sock
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: dev
              mountPath: /dev
              readOnly: true
      volumes:
        - name: cwagent-config
          configMap:
            name: cwagent-config
        - name: run
          hostPath:
            path: /var/run/docker.sock
        - name: rootfs
          hostPath:
            path: /
        - name: containerd-sock
          hostPath:
            path: /var/run/containerd/containerd.sock
        - name: sys
          hostPath:
            path: /sys
        - name: dev
          hostPath:
            path: /dev
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Namespace
metadata:
  name: AmazonCloudWatch
  labels:
    app.kubernetes.io/name: amazon-cloudwatch
