infrastructure/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: gistpin
spec:
  type: LoadBalancer
  selector:
    app: gistpin-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
